unpackaged/main/default/objects/Absence_Staging__c/Absence_Staging__c.object-meta.xml
<CustomObject>
    <label>Absence Staging</label>
    <nameField>
        <label>Absence Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Absence Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>