unpackaged/main/default/objects/Absence_Staging__c/fields/Absence_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Absence_Project_ID__c</fullName>
    <description>Absence Project ID for the Absence Project for which the PSA records must be created.</description>
    <inlineHelpText>Absence Project ID for the Absence Project for which the PSA records must be created.</inlineHelpText>
    <label>Absence Project ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>