unpackaged/main/default/objects/Absence_Staging__c/fields/Half_Day_at_Start__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_at_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Half Day at Start</label>
    <type>Checkbox</type>
</CustomField>