unpackaged/main/default/objects/Absence_Staging__c/fields/Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Day__c</fullName>
    <label>Last Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>