unpackaged/main/default/objects/Absence_Staging__c/fields/SageHR_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SageHR_External_ID__c</fullName>
    <description>External ID linking the SageHR Absence and the Salesforce Absence Staging records.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID linking the SageHR Absence and the Salesforce Absence Staging records.</inlineHelpText>
    <label>SageHR External ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>