unpackaged/main/default/objects/Absence_Staging__c/fields/Team_Member_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_External_ID__c</fullName>
    <description>Resource/Team Member External ID linking the Sage HR Team Member record requesting the absence and the Certinia PSA Resource record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Resource/Team Member External ID linking the Sage HR Team Member record requesting the absence and the Certinia PSA Resource record.</inlineHelpText>
    <label>Team Member External ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>